home-cluster/cloudflared/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dummy
  namespace: cloudflared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-dummy
  template:
    metadata:
      labels:
        app: nginx-dummy
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: config
        configMap:
          name: nginx-dummy-config
