home-cluster/cloudflared/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: cloudflared
  annotations:
    secret.reloader.stakater.com/reload: "cloudflared-tunnel-token"
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2025.11.1
          args: ["tunnel", "--config", "/etc/cloudflared/config.yaml", "run"]
          resources:
            limits:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - name: config
              mountPath: /etc/cloudflared/config.yaml
              subPath: config.yaml
          livenessProbe:
            httpGet:
              path: /ready
              port: 2000
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: cloudflared-config
