home-cluster/cloudflared/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-dummy
  namespace: cloudflared
spec:
  selector:
    app: nginx-dummy
  ports:
  - port: 80
    targetPort: 80
